# mcp-tools-sql

./: .gitignore  .importlinter  .large-files-allowlist  .mcp.json  .mcp.linux.json  .mcp.macos.json  LICENSE  README.md  claude.bat  claude_local.bat  claude_local.sh  mcp-tools-sql.md  pyproject.toml  tach.toml  vulture_whitelist.py
.claude/: CLAUDE.md  settings.local.json
.claude/knowledge_base/: refactoring_principles.md
.claude/skills/check_branch_status/: SKILL.md
.claude/skills/commit_push/: SKILL.md
.claude/skills/implementation_approve/: SKILL.md
.claude/skills/implementation_review/: SKILL.md
.claude/skills/issue_analyse/: SKILL.md
.claude/skills/issue_update/: SKILL.md
.claude/skills/plan_review/: SKILL.md
.claude/skills/rebase/: rebase_design.md
.github/workflows/: approve-command.yml  ci.yml
docs/: cli.md
docs/architecture/: architecture.md
examples/: prototype_server.py
pr_info/: TASK_TRACKER.md  implementation_review_log_1.md  implementation_review_log_2.md  plan_review_log_1.md  plan_review_log_2.md  plan_review_log_3.md
pr_info/steps/: Decisions.md  step_1.md  step_10.md  step_2.md  step_3.md  step_3a.md  step_3b.md  step_4.md  step_5.md  step_6.md  step_7.md  step_8.md  step_9.md  summary.md
src/mcp_tools_sql/: __init__.py  __main__.py  count_tools.py  default_queries.toml  formatting.py  identifiers.py  main.py  query_helpers.py  query_tools.py  schema_tools.py  server.py  tool_builder.py  tool_logging.py  update_tools.py  validation_tools.py
src/mcp_tools_sql/backends/: base.py  mssql.py  sqlite.py
src/mcp_tools_sql/cli/: __init__.py  parsers.py
src/mcp_tools_sql/cli/commands/: init.py  verify.py
src/mcp_tools_sql/config/: __init__.py  authoring.py  loader.py  models.py
src/mcp_tools_sql/utils/: log_utils.py  sql_placeholders.py
src/mcp_tools_sql/utils/data_type_utility/: __init__.py  type_mapping.py
src/mcp_tools_sql/verification/: __init__.py  _helpers.py  builtin.py  config_files.py  connection.py  dependencies.py  environment.py  orchestrator.py  queries.py  updates.py
tests/: conftest.py  test_count_tools.py  test_default_queries.py  test_dynamic_tool_registration.py  test_formatting.py  test_identifiers.py  test_query_tools.py  test_schema_tools.py  test_server.py  test_smoke.py  test_sql_placeholders.py  test_tool_builder.py  test_tool_logging.py  test_update_tools.py  test_validation_tools.py
tests/backends/: test_mssql.py  test_sqlite.py
tests/cli/: test_help.py  test_init.py  test_main_dispatch.py  test_verify.py
tests/cli/fixtures/: verify_snapshot.toml  verify_snapshot.txt
tests/config/: test_authoring.py  test_loader.py  test_models.py
tests/verification/: __init__.py  conftest.py  test_builtin.py  test_config_files.py  test_connection.py  test_dependencies.py  test_environment.py  test_helpers.py  test_orchestrator.py  test_queries.py  test_updates.py
tools/: read_github_deps.py  reinstall_local.bat  reinstall_local.sh
